<resources>
    <string name="app_name">Projeto Freelances</string>
    <string name="spekable_floatButton">adicionar Freelancer</string>
    <string name="Remove">Remove</string>
    <string name="Edite">Edite</string>
    <string name="profissional">Profissional</string>
    <string name="noivos">Noivos</string>
    <string name="Telefone">Telefone</string>
    <string name="local">Local</string>
    <string name="date">Date</string>
    <string name="horas">Horas</string>
    <string name="salvar">Salvar</string>
    <string name="pending">Pending</string>
    <string name="old_freelas">Old Freelas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>